@@ -17,6 +17,7 @@ Changes:
 - Add console fonts and keymaps.
 - Add keymap setting/restart WebGUI in console menu.
 - Add quirk for Silicon Power 16GB and more.
+- Add allow group when local users only mode on FTP service.
 - Remove usesendfile on CIFS/SMB.
 - Change ZFS pool info reflected from zpool list.
 - Upgrade bash 4.3 to patch 42.
